# MarketStream

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
cep/: __init__.py  automaton.py  cep_detector.py  events.py  guards.py  patterns.py
config/: logging_config.py  settings.py
dashboard/: app.py  shared.py
dashboard/pages/: 1_Price_Chart.py  2_Sentiment_Feed.py  3_Anomaly_Alerts.py  4_Comparison.py  5_Model_Health.py
data/comparison_results/: comparison_60d_0.05.json  event_case_study.json
data/comparison_results_nfa_tuned/: comparison_60d_0.05.json
docs/: ARCHITECTURE.md  LITERATURE_REVIEW.docx  LITERATURE_REVIEW.md  MODULE_GUIDE.md  PROJECT_PLAN.md
ml/: backtest.py  backtest_anomalies.py  base_detector.py  compare_methods.py  data_utils.py  detector.py  drift_monitor.py  ensemble.py  event_case_study.py  online_scorer.py  retrain.py  train_baseline.py  train_lstm.py
ml/detectors/: __init__.py  ewma_detector.py  hst_detector.py  lstm_detector.py
processing/: feature_engine.py  stream_app.py
producers/: news_producer.py  price_producer.py
scripts/: create_topics.sh  generate_figures.py  seed_historical.py  start_all.sh
storage/: db.py  init_db.py  models.py
tests/: test_backtest.py  test_cep.py  test_db.py  test_detector.py  test_ensemble.py  test_ewma_detector.py  test_feature_engine.py  test_hst_detector.py  test_lstm_detector.py  test_news_producer.py  test_online_scorer.py
